codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_narrow_shell_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---

 Better Codex


 ┌───────────────────┬────────────────────┬──────────────────┬──────────────┐
 │     Settings      │     Workspace      │     Sessions     │     Help     │
 └───────────────────┴────────────────────┴──────────────────┴──────────────┘
 Tools in progress exec just test -p codex-tui
 Sessions unfocused active 0 shown


 Conversation
 ▌ tool exec just test -p codex-tui                                         │
                                                                            │
 ▌ edited 3 files +128 -24                                                  │
                                                                            ┃
 codex: The new shell owns the fullscreen surface.                          ┃


 Composer ready 1:37
 > Summarize the new shell architecture
