codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_network_approval_details_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&network_shell, Rect::new(0, 0, 100, 28))"
---
                                                  │
  Dashboard  ◆ BC      gpt-5-codex ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│─────────────────────────━━━━━━━━━━━━━──────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
         2. Wire transcript                     │ │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
         3. Render dashboard                    │ │▎+ New session  Ctrl+N
                                                │ │▎loading sessions
 ▌ tool exec just test -p codex-tui             ┃ │
                                                ┃ │▎◆ THREAD
 ▌ edited 3 files +128 -24                      ┃ │▎stage-one
                                                ┃ │▎id 01900000-0000-7000-8000-000000000001
 ▎ CODEX  The new shell owns the fullscreen     ┃ │▎resume, fork, archive, delete in session list
          surface.                              ┃ │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ APPROVAL                                      ││
│? Connect to https://packages.example.com       ││
│  Reason: Needs network access                  ││
│  Network target: https://packages.example.com  ││
│  Proposed persistent network rules: [{ host:   ││
│  "packages.example.com", action: "allow" }]    ││
│> 1 Run once                                    ││
│  2 Run for this session                        ││
│  3 Allow host permanently: packages.example.com││
│  4 Deny and interrupt                          ││
│   e Edit   ? Explain                           ││
╰────────────────────────────────────────────────╯│
