codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_output_blocks_as_inset_neutral_rectangles.snap
---
source: tui/src/app_shell_tests.rs
expression: rendered
---

 Better Codex


 Navigation  Alt + Left / Right
         1S         |        2W        |       3Set       |      4Help
 Tools in progress exec just test -p codex-tui
 Sessions unfocused active 0 shown
 Thread stage-one
 Status thinking
 Plan Build the standalone shell in slices.


 Conversation
 ▌ tool exec cargo test

   ▌ output ... 4 earlier output lines
   ▌        line 5
   ▌        line 6
   ▌        line 7





 Composer ready 1:37
 > Summarize the new shell architecture
