codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_output_blocks_as_inset_status_rectangles.snap
---
source: tui/src/app_shell_tests.rs
expression: rendered
---

 ◆ BC              Panels   gpt-5-codex ▾   default ▾   default ▾  ● thinking
──────────────────────────────────────────────────────────────────────────────

 ◆ CONVERSATION
 ▌ tool exec cargo test

   ▌ output ... 4 earlier output lines
   ▌        line 5
   ▌        line 6
   ▌        line 7















╭────────────────────────────────────────────────────────────────────────────╮
│◆ MESSAGE  1:37                                                             │
│> Summarize the new shell architecture                                      │
│                                                                            │
│                                                                            │
╰────────────────────────────────────────────────────────────────────────────╯
