codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_pending_user_input_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                  │
  Dashboard  ◆ BC      gpt-5-codex ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│─────────────────────────━━━━━━━━━━━━━──────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
 ▎ YOU  Create a divergent standalone TUI.      ┃ │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
                                                ┃ │▎+ New session  Ctrl+N
 ▎ CODEX  Started a fullscreen app shell backed ┃ │▎loading sessions
          by app-server turns.                  ┃ │
 ▎ PLAN  1. Build shell                         ┃ │▎◆ THREAD
         2. Wire transcript                     ┃ │▎stage-one
         3. Render dashboard                    ┃ │▎id 01900000-0000-7000-8000-000000000001
                                                ┃ │▎resume, fork, archive, delete in session list
 ▌ tool exec just test -p codex-tui             ┃ │
                                                ┃ │
 ▌ edited 3 files +128 -24                      ┃ │
                                                ┃ │
 ▎ CODEX  The new shell owns the fullscreen     ┃ │
          surface.                              ┃ │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ TOOL INPUT                                    ││
│? Tool input: tool-input-1 (1/1)                ││
│  Environment: Which environment should the tool││
│  use?                                          ││
│> 2  1 Production  2 Staging                    ││
│                                                ││
╰────────────────────────────────────────────────╯│
