codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_queued_message_editor_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                  │
 ◆ BC      gpt-5-codex ▾   default ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│
                                                  │Alt+←/→ view  ^D hide  │ ^N new · Sess ↵ focus
 ◆ CONVERSATION                                   │Shift/Alt+↵ newline    │ r/f resume/fork
 ▎ SYSTEM  Better Codex app shell                 │↵ save/resume  ^C exit │ a/u/v/d arc/show/del
 ▎ YOU  Create a divergent standalone TUI.        │Alt+↑/↓ traverse       │ n rename  / search
                                                  │Alt+M/E model/effort   │ Agent ↵ focus/log · j/…
 ▎ CODEX  Started a fullscreen app shell backed   │^1 Status · ^2 Agents  │ Tab/j/k nav · ↵ apply
          by app-server turns.                    │^3 Sessions · ^4 Help  │ Esc×2 exit
 ▎ PLAN  1. Build shell                           │
         2. Wire transcript                       │
         3. Render dashboard                      │
                                                  │
 ▌ tool exec just test -p codex-tui               │
                                                  │
 ▌ edited 3 files +128 -24                        │
                                                  │
 ▎ CODEX  The new shell owns the fullscreen       │
          surface.                                │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  EDIT 2/2  1:35                       ││
│> second queued follow-up with edits            ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
