codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_rate_limits_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                  │
 ◆ BC      gpt-5-codex ▾   default ▾   default ▾  │ Settings │ Agents │ Workspace │ Sessions │ Help
──────────────────────────────────────────────────│━━━━━━━━━━──────────────────────────────────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SETTINGS
 ▎ SYSTEM  Better Codex app shell                 │▎Model │ Permissions │ Appearance │Integrations
 ▎ YOU  Create a divergent standalone TUI.        │▎━━━━━━─────────────────────────────────────────
                                                  │▎› Model: gpt-5-codex
 ▎ CODEX  Started a fullscreen app shell backed   │▎  Reasoning: default
          by app-server turns.                    │▎  Service tier: default
 ▎ PLAN  1. Build shell                           │
         2. Wire transcript                       │▎◆ TOKENS
         3. Render dashboard                      │▎input 1k | output 240
                                                  │▎Context 100% left
 ▌ tool exec just test -p codex-tui               │
                                                  │▎◆ RATE LIMITS
 ▌ edited 3 files +128 -24                        │▎Codex 82% 5h
                                                  │▎  secondary 18% 7d
 ▎ CODEX  The new shell owns the fullscreen       │▎credits $12.34
          surface.                                │▎spend 75% left
                                                  │▎Background 95% 1h
                                                  │▎limited RateLimitReached
                                                  │▎reset credits 2
                                                  │
                                                  │▎◆ WORKSPACE
                                                  │▎cwd /workspace/better-codex
                                                  │▎profile managed
                                                  │▎files restricted, net restricted
                                                  │▎roots none selected
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:37                                 ││
│> Summarize the new shell architecture          ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
