codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_recovered_retry_status_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 78, 16,),)"
---
  Dashboard  ◆ BC           gpt-5-codex ▾   default ▾   default ▾  ◑ thinking
──────────────────────────────────────────────────────────────────────────────

 ◆ CONVERSATION
 ▎ ERROR  stream disconnected

 ▎ CODEX  Recovered response.



╭────────────────────────────────────────────────────────────────────────────╮
│◆ MESSAGE  ● RUNNING  1:37                                                  │
│> Summarize the new shell architecture                                      │
│                                                                            │
│                                                                            │
╰────────────────────────────────────────────────────────────────────────────╯
